--- a/part4/package.json
+++ b/part4/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.14",
+    "mongoose-unique-validator": "^3.0.0",
     "supertest": "^6.2.2"
   },
   "devDependencies": {
