--- a/part5/package.json
+++ b/part5/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "cypress": "^9.5.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.1.1"
   }
 }
