--- a/part7/extending-the-bloglist/app/package.json
+++ b/part7/extending-the-bloglist/app/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "prop-type": "0.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
