--- a/part9/typescript-exercise/package.json
+++ b/part9/typescript-exercise/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "ts-node": "ts-node",
     "calculateBmi": "ts-node -- calculateBmi.ts",
-    "exerciseCalculator": "ts-node -- exerciseCalculator.ts"
+    "exerciseCalculator": "ts-node -- exerciseCalculator.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "author": "Shamsur",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.25"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.25",
+    "express": "^4.17.3",
+    "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
     "ts-node": "^10.7.0",
