--- a/part9/typescript-exercise/package.json
+++ b/part9/typescript-exercise/package.json
@@ -7,7 +7,8 @@
     "ts-node": "ts-node",
     "calculateBmi": "ts-node -- calculateBmi.ts",
     "exerciseCalculator": "ts-node -- exerciseCalculator.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "author": "Shamsur",
   "license": "ISC",
@@ -18,6 +19,9 @@
     "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
