--- a/part9/typescript-exercise/.eslintrc
+++ b/part9/typescript-exercise/.eslintrc
@@ -23,6 +23,6 @@
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "project": "./tsconfig.json"
+      "project": "./typescript-exercise/tsconfig.json"
     }
 }
