--- a/part9/express-typescript/package.json
+++ b/part9/express-typescript/package.json
@@ -21,7 +21,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "cors": "^2.8.5",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "uuid": "^8.3.2"
   }
 }
