--- a/part9/express-typescript/package.json
+++ b/part9/express-typescript/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "body-parser": "^1.20.0",
     "eslint": "^8.14.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
