--- a/part8/part-a/package.json
+++ b/part8/part-a/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "libarary-backend.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.7.0"
+    "apollo-server": "^3.7.0",
+    "graphql": "^16.5.0"
   }
 }
