--- a/part8/part-a/package.json
+++ b/part8/part-a/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "libarary-backend.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.7.0",
     "graphql": "^16.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
