--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.7.0",
+    "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "mongoose": "^6.3.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
