--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.14",
     "apollo-server": "^3.7.0",
+    "apollo-server-core": "^3.8.2",
+    "apollo-server-express": "^3.8.2",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
